--- a/css/estilos.css
+++ b/css/estilos.css
@@ -376,7 +376,7 @@ footer{
   }
   nav ul{  
     position: fixed;
-    display: flex;
+    display: none;
     flex-direction: column;
     top:86px;
     left: 10%;
@@ -403,7 +403,7 @@ footer{
     width: 100%;
     height: -400px;
     font-size: 25px;
-    
+    display:flex;
 
   }
   .personal{
