--- a/css/estilos.css
+++ b/css/estilos.css
@@ -370,8 +370,8 @@ footer{
     left:center;
   }
   .foto-proyecto {
-    width: 100%;
-    height: 100%;
+    width: 250px;
+    height: 150px;
   }
   div h1{
     display:none;
