--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -113,8 +113,21 @@ footer{
 }
 @media screen and (max-width: 800px){
 
-  .nav-enlace{
+   .nav-enlace{
     font-size:3rem;
     text-decoration:none;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
+}
+@media screen and (max-width: 390px){
+
+  .nav-enlace{
+    font-size:2rem;
+    text-decoration:none;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
   }
 }
